--- a/app/src/main/res/layout/activity_node.xml
+++ b/app/src/main/res/layout/activity_node.xml
@@ -15,5 +15,6 @@
         android:numColumns="3"
         android:stretchMode="columnWidth"
         android:verticalSpacing="2dp"
-        android:horizontalSpacing="2dp"></GridView>
+        android:horizontalSpacing="2dp"
+       ></GridView>
 </LinearLayout>
