--- a/app/src/main/res/layout/node_details.xml
+++ b/app/src/main/res/layout/node_details.xml
@@ -23,7 +23,8 @@
 
 		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
+			android:layout_height="wrap_content"
+			android:gravity="center">
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -60,12 +61,11 @@
 					android:text="水压值："
 					android:textSize="18sp"/>
 
-				<Spinner
+				<Button
 					android:id="@+id/pressure_variate"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="null"
-					android:textSize="18sp"/>
+					android:textSize="14sp"/>
 
 			</LinearLayout>
 
