--- a/app/src/main/res/layout/node_details.xml
+++ b/app/src/main/res/layout/node_details.xml
@@ -234,6 +234,7 @@
 	</LinearLayout>
 
 	<FrameLayout
+		android:id="@+id/fragment_line_chart"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 		<fragment
