--- a/app/src/main/res/layout/header_just_username.xml
+++ b/app/src/main/res/layout/header_just_username.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/id_header_user"
     android:layout_width="match_parent"
     android:layout_height="192dp"
     android:background="@drawable/user_portrait_bg"
@@ -9,16 +10,17 @@
 
     <TextView
         android:layout_alignParentBottom="true"
-        android:id="@+id/id_username"
+        android:id="@+id/id_tv_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:text="governor"/>
 
     <ImageView
+        android:id="@+id/id_iv_user_portrait"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_above="@id/id_username"
+        android:layout_above="@id/id_tv_username"
         android:layout_marginBottom="16dp"
         android:src="@drawable/user_portrait"/>
 
