定义了用户，阀门，历史三个实体类

--- a/app/src/main/res/layout/activity_node.xml
+++ b/app/src/main/res/layout/activity_node.xml
@@ -42,6 +42,6 @@
         android:background="#ffffffff"
         android:clipToPadding="false"
         android:divider="@drawable/menu_divider"
-        android:listSelector="?attr/selectableItemBackground"
+        android:listSelector="#A1D4F3"
         />
 </android.support.v4.widget.DrawerLayout>
