--- a/app/src/main/res/drawable/background_login.xml
+++ b/app/src/main/res/drawable/background_login.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 	<gradient
 		android:angle="90"
-		android:endColor="#FF72CAEf"
-		android:startColor="#24B5F1"
+		android:endColor="#FF80CDED"
+		android:startColor="#FF78CCEA"
 		/>
 </shape>
