--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -122,6 +122,15 @@
 		 android:layout_alignBottom="@id/miniTwitter_logo"
 		 android:paddingBottom="8dp"
 		  /> -->
+		<ProgressBar
+			android:id="@+id/login_process_dialog_progressBar"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:indeterminate="false"
+			android:indeterminateDrawable="@drawable/dialog_style_color"
+			android:visibility="invisible"
+			android:layout_alignParentTop="true"
+			android:layout_centerHorizontal="true" />
 	</RelativeLayout>
 
 </LinearLayout>
